...
        android:text="@string/tv_emptyCategoryList"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
