...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_categoryName"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"/>
...
